k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: browser-game
  labels:
    app: browser-game-laravel
