k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser-game
  namespace: browser-game
  labels:
    app: browser-game
    component: application
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: browser-game
    component: application
